# spooler-controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
android/app/src/main/: AndroidManifest.xml
src/: dartt_init.cpp  dartt_init.h  dartt_mctl_params.h  main.cpp  motor.cpp  motor.h  pctl.h  plotting.cpp  plotting.h  profiles.h  spooler_robot.cpp  spooler_robot.h  trig_fixed.c  trig_fixed.h  ui.cpp  ui.h
